--- a/src/client/package.json
+++ b/src/client/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "pinia": "^2.0.32",
+    "primeflex": "^3.3.0",
+    "primevue": "^3.27.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
